feat: change meeting APIs ref: WSC-917 (#100)
* feat: change meeting APIs refs: WSC-917

* feat: change join flow WSC-017

* test: add tests

* fix: fix typo refs:WSC-917

* test: update access meeting modal test refs

---------
