# src/network/MeetingApiDefinition.yaml
@@ -1,8 +1,12 @@
+# SPDX-FileCopyrightText: 2023 Zextras <https://www.zextras.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 openapi: 3.0.3
 info:
-  title: Zextras Carbonio Chats CE Meeting Api
-  description: Zextras Carbonio Chats CE Meeting HTTP APIs definition.
-  version: 0.2.0
+  title: Zextras Carbonio Workstream Collaboration CE Meeting Api
+  description: Zextras Carbonio Workstream Collaboration CE Meeting HTTP APIs definition.
+  version: 0.3.2
   contact:
     email: smokybeans@zextras.com
 servers:
@@ -14,16 +18,26 @@ paths:
     get:
       tags:
         - Meetings
-      summary: Retrieves a list of every components the user has access to
+      summary: Retrieves a list of every meeting the user has access to
       operationId: listMeeting
       responses:
         200:
           $ref: '#/components/responses/200ListMeetingResponse'
+    post:
+      tags:
+        - Meetings
+      summary: Creates a new meeting
+      operationId: createMeeting
+      requestBody:
+        $ref: '#/components/requestBodies/CreateMeetingRequest'
+      responses:
+        200:
+          $ref: '#/components/responses/200CreateMeetingResponse'
   /meetings/{meetingId}:
     get:
       tags:
         - Meetings
-      summary: Retrieves the requested components
+      summary: Retrieves the requested meeting
       operationId: getMeeting
       parameters:
         - $ref: '#/components/parameters/pathMeetingId'
@@ -39,7 +53,7 @@ paths:
     delete:
       tags:
         - Meetings
-      summary: Deletes the requested components
+      summary: Deletes the requested meeting
       operationId: deleteMeeting
       parameters:
         - $ref: '#/components/parameters/pathMeetingId'
@@ -52,11 +66,45 @@ paths:
           $ref: '#/components/responses/403ForbiddenResponse'
         404:
           $ref: '#/components/responses/404NotFoundResponse'
-  /meetings/{meetingId}/join:
-    put:
+  /meetings/{meetingId}/start:
+    post:
       tags:
         - Meetings
-      summary: adds the current user to the specified components
+      summary: Stars the current meeting
+      operationId: startMeeting
+      parameters:
+        - $ref: '#/components/parameters/pathMeetingId'
+      responses:
+        204:
+          $ref: '#/components/responses/204StartMeetingResponse'
+        401:
+          $ref: '#/components/responses/401UnauthorizedResponse'
+        403:
+          $ref: '#/components/responses/403ForbiddenResponse'
+        404:
+          $ref: '#/components/responses/404NotFoundResponse'
+  /meetings/{meetingId}/stop:
+    post:
+      tags:
+        - Meetings
+      summary: Stops the current meeting
+      operationId: stopMeeting
+      parameters:
+        - $ref: '#/components/parameters/pathMeetingId'
+      responses:
+        204:
+          $ref: '#/components/responses/204StopMeetingResponse'
+        401:
+          $ref: '#/components/responses/401UnauthorizedResponse'
+        403:
+          $ref: '#/components/responses/403ForbiddenResponse'
+        404:
+          $ref: '#/components/responses/404NotFoundResponse'
+  /meetings/{meetingId}/join:
+    post:
+      tags:
+        - Meetings
+      summary: adds the current user to the specified meeting
       operationId: joinMeeting
       parameters:
         - $ref: '#/components/parameters/pathMeetingId'
@@ -72,10 +120,10 @@ paths:
         404:
           $ref: '#/components/responses/404NotFoundResponse'
   /meetings/{meetingId}/leave:
-    put:
+    post:
       tags:
         - Meetings
-      summary: remove the current user to the specified components
+      summary: remove the current user to the specified meeting
       operationId: leaveMeeting
       parameters:
         - $ref: '#/components/parameters/pathMeetingId'
@@ -88,52 +136,20 @@ paths:
           $ref: '#/components/responses/403ForbiddenResponse'
         404:
           $ref: '#/components/responses/404NotFoundResponse'
-  /meetings/{meetingId}/video:
+  /meetings/{meetingId}/sessions/{sessionId}/video:
     put:
       tags:
         - Meetings
-      summary: open video stream for the current session
-      operationId: openVideoStream
-      parameters:
-        - $ref: '#/components/parameters/pathMeetingId'
-      responses:
-        204:
-          $ref: '#/components/responses/204OpenVideoStreamResponse'
-        401:
-          $ref: '#/components/responses/401UnauthorizedResponse'
-        403:
-          $ref: '#/components/responses/403ForbiddenResponse'
-        404:
-          $ref: '#/components/responses/404NotFoundResponse'
-  /meetings/{meetingId}/sessions/{sessionId}/video:
-    delete:
-      tags:
-        - Meetings
-      summary: close video stream for the requested session
-      operationId: closeVideoStream
+      summary: update video stream status for the current session
+      operationId: updateVideoStream
       parameters:
         - $ref: '#/components/parameters/pathMeetingId'
         - $ref: '#/components/parameters/pathSessionId'
+      requestBody:
+        $ref: '#/components/requestBodies/UpdateVideoStreamRequest'
       responses:
         204:
-          $ref: '#/components/responses/204CloseVideoStreamResponse'
-        401:
-          $ref: '#/components/responses/401UnauthorizedResponse'
-        403:
-          $ref: '#/components/responses/403ForbiddenResponse'
-        404:
-          $ref: '#/components/responses/404NotFoundResponse'
-  /meetings/{meetingId}/audio:
-    put:
-      tags:
-        - Meetings
-      summary: open audio stream for the current session
-      operationId: openAudioStream
-      parameters:
-        - $ref: '#/components/parameters/pathMeetingId'
-      responses:
-        204:
-          $ref: '#/components/responses/204OpenAudioStreamResponse'
+          $ref: '#/components/responses/204VideoStreamResponse'
         401:
           $ref: '#/components/responses/401UnauthorizedResponse'
         403:
@@ -141,34 +157,19 @@ paths:
         404:
           $ref: '#/components/responses/404NotFoundResponse'
   /meetings/{meetingId}/sessions/{sessionId}/audio:
-    delete:
-      tags:
-        - Meetings
-      summary: close audio stream for the current session
-      operationId: closeAudioStream
-      parameters:
-        - $ref: '#/components/parameters/pathMeetingId'
-        - $ref: '#/components/parameters/pathSessionId'
-      responses:
-        204:
-          $ref: '#/components/responses/204CloseAudioStreamResponse'
-        401:
-          $ref: '#/components/responses/401UnauthorizedResponse'
-        403:
-          $ref: '#/components/responses/403ForbiddenResponse'
-        404:
-          $ref: '#/components/responses/404NotFoundResponse'
-  /meetings/{meetingId}/screen:
     put:
       tags:
         - Meetings
-      summary: open screen share stream for the current session
-      operationId: openScreenShareStream
+      summary: update audio stream status for the current session
+      operationId: updateAudioStream
       parameters:
         - $ref: '#/components/parameters/pathMeetingId'
+        - $ref: '#/components/parameters/pathSessionId'
+      requestBody:
+        $ref: '#/components/requestBodies/UpdateAudioStreamRequest'
       responses:
         204:
-          $ref: '#/components/responses/204OpenScreenShareStream'
+          $ref: '#/components/responses/204AudioStreamResponse'
         401:
           $ref: '#/components/responses/401UnauthorizedResponse'
         403:
@@ -176,17 +177,19 @@ paths:
         404:
           $ref: '#/components/responses/404NotFoundResponse'
   /meetings/{meetingId}/sessions/{sessionId}/screen:
-    delete:
+    put:
       tags:
         - Meetings
-      summary: close screen share stream for the requested session
-      operationId: closeScreenShareStream
+      summary: update screen stream status for the current session
+      operationId: updateScreenStream
       parameters:
         - $ref: '#/components/parameters/pathMeetingId'
         - $ref: '#/components/parameters/pathSessionId'
+      requestBody:
+        $ref: '#/components/requestBodies/UpdateScreenStreamRequest'
       responses:
         204:
-          $ref: '#/components/responses/204CloseScreenShareStream'
+          $ref: '#/components/responses/204ScreenStreamResponse'
         401:
           $ref: '#/components/responses/401UnauthorizedResponse'
         403:
@@ -199,7 +202,7 @@ components:
     pathMeetingId:
       in: path
       name: meetingId
-      description: components identifier
+      description: meeting identifier
       schema:
         type: string
         format: uuid
@@ -211,28 +214,55 @@ components:
       description: session identifier
       schema:
         type: string
-    pathRoomId:
-      in: path
-      name: roomId
-      description: room identifier
-      schema:
-        type: string
-        format: uuid
       required: true
       allowEmptyValue: false
 
   requestBodies:
     JoinMeetingRequest:
-      description: user settings to participate
+      description: user request containing its streams settings to join a meeting
       required: true
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/JoinSettings'
+    CreateMeetingRequest:
+      description: Data to create a new meeting
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/NewMeetingData'
+    UpdateVideoStreamRequest:
+      description: user request to update a meeting stream status
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/VideoStreamSettings'
+    UpdateAudioStreamRequest:
+      description: user request to update a meeting stream status
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AudioStreamSettings'
+    UpdateScreenStreamRequest:
+      description: user request to update a meeting stream status
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ScreenStreamSettings'
 
   responses:
+    200CreateMeetingResponse:
+      description: The meeting just created
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Meeting'
     200ListMeetingResponse:
-      description: List of every components that the user has access to
+      description: List of every meeting that the user has access to
       content:
         application/json:
           schema:
@@ -240,35 +270,27 @@ components:
             items:
               $ref: '#/components/schemas/Meeting'
     200GetMeetingResponse:
-      description: Gets the requested components data
+      description: Gets the requested meeting data
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Meeting'
-    201CreateMeetingResponse:
-      description: Meeting was created successfully
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Meeting'
+    204StartMeetingResponse:
+      description: The meeting was started successfully
+    204StopMeetingResponse:
+      description: The meeting was stopped successfully
     204DeleteMeetingResponse:
-      description: The components was deleted successfully
+      description: The meeting was deleted successfully
     204JoinMeetingResponse:
-      description: The user joined the components successfully
+      description: The user joined the meeting successfully
     204LeaveMeetingResponse:
-      description: The user exited the components successfully
-    204OpenAudioStreamResponse:
-      description: The audio stream opened successfully
-    204CloseAudioStreamResponse:
-      description: The audio stream closed successfully
-    204OpenVideoStreamResponse:
-      description: The video stream opened successfully
-    204CloseVideoStreamResponse:
-      description: The video stream closed successfully
-    204OpenScreenShareStream:
-      description: The screen share stream opened successfully
-    204CloseScreenShareStream:
-      description: The screen share stream closed successfully
+      description: The user exited the meeting successfully
+    204AudioStreamResponse:
+      description: The status of audio stream changed successfully
+    204VideoStreamResponse:
+      description: The status of video stream changed successfully
+    204ScreenStreamResponse:
+      description: The status of screen stream changed successfully
 
     400BadRequestResponse:
       description: The request had wrong or missing parameters
@@ -280,11 +302,33 @@ components:
       description: The requested resource was not found
     409Conflict:
       description: The request conflict with the current state
-
   schemas:
+    NewMeetingData:
+      type: object
+      properties:
+        name:
+          type: string
+        users:
+          type: array
+          items:
+            $ref: '#/components/schemas/MeetingUser'
+        roomId:
+          type: string
+          format: uuid
+        meetingType:
+          description: 'Defines the type of meeting, if permanent it will never be automatically deleted,
+          if scheduled it will be removed after the expiration is passed'
+          $ref: '#/components/schemas/MeetingType'
+        expiration:
+          description: 'This field is only used for scheduled meetings to indicate when the meeting will
+            no more be necessary'
+          type: string
+          format: date-time
+      required:
+        - name
     Room:
       type: object
-      description: Room data for a components
+      description: Room data for a meeting
       properties:
         id:
           type: string
@@ -301,31 +345,44 @@ components:
           type: string
           description: room description
           readOnly: true
-    Participant:
+    MeetingUser:
       type: object
-      description: Meeting participant data
+      description: Defines a user in the access list of a meeting
       properties:
         userId:
           type: string
           format: uuid
-          readOnly: true
           description: user identifier
-        sessionId:
-          type: string
-          readOnly: true
-          description: VideoServer session id
-        audioStreamOn:
-          type: boolean
-          readOnly: true
-          description: indicates if the audio stream is on
-        videoStreamOn:
-          type: boolean
-          readOnly: true
-          description: indicates if the video stream is on
-        screenStreamOn:
-          type: boolean
-          readOnly: true
-          description: indicates if the screen share stream is on
+        userType:
+          $ref: '#/components/schemas/MeetingUserType'
+    MeetingType:
+      type: string
+      enum:
+        - permanent
+        - scheduled
+    MeetingUserType:
+      type: string
+      enum:
+        - moderator
+        - registered
+    Participant:
+      description: Meeting participant data
+      allOf:
+        - $ref: '#/components/schemas/MeetingUser'
+        - type: object
+          properties:
+            audioStreamOn:
+              type: boolean
+              readOnly: true
+              description: indicates if the audio stream is on
+            videoStreamOn:
+              type: boolean
+              readOnly: true
+              description: indicates if the video stream is on
+            screenStreamOn:
+              type: boolean
+              readOnly: true
+              description: indicates if the screen share stream is on
     Meeting:
       type: object
       description: Meeting data
@@ -334,12 +391,18 @@ components:
           type: string
           format: uuid
           readOnly: true
-          description: meesting identifier
+          description: meeting identifier
+        name:
+          type: string
+          description: The meeting name
         roomId:
           type: string
           format: uuid
           readOnly: true
-          description: meesting identifier
+          description: room identifier
+        active:
+          description: Indicates if the meeting is active
+          type: boolean
         participants:
           type: array
           items:
@@ -349,18 +412,47 @@ components:
           format: date-time
           readOnly: true
           description: entity creation date
+        meetingType:
+          $ref: '#/components/schemas/MeetingType'
     JoinSettings:
       type: object
-      description: user settings to participate
+      description: user's streams settings to join a meeting
       properties:
-        audioStreamOn:
+        audioStreamEnabled:
           type: boolean
           default: false
           readOnly: true
-          description: indicates if the audio stream is on
-        videoStreamOn:
+          description: indicates the audio stream status to join the meeting
+        videoStreamEnabled:
           type: boolean
           default: false
           readOnly: true
-          description: indicates if the video stream is on
-      required: [ audioStreamOn, videoStreamOn ]
+          description: indicates the video stream status to join the meeting
+      required: [ audioStreamEnabled, videoStreamEnabled ]
+    VideoStreamSettings:
+      type: object
+      description: settings to apply on user's video stream
+      properties:
+        enabled:
+          type: boolean
+          readOnly: true
+          description: indicates the status to change the video stream to
+      required: [ enabled ]
+    AudioStreamSettings:
+      type: object
+      description: settings to apply on user's audio stream
+      properties:
+        enabled:
+          type: boolean
+          readOnly: true
+          description: indicates the status to change the audio stream to
+      required: [ enabled ]
+    ScreenStreamSettings:
+      type: object
+      description: settings to apply on user's screen stream
+      properties:
+        enabled:
+          type: boolean
+          readOnly: true
+          description: indicates the status to change the screen stream to
+      required: [ enabled ]
