# src/network/websocket/wsEventsHandler.ts
@@ -8,12 +8,13 @@ import { find } from 'lodash';
 
 import { EventName, sendCustomEvent } from '../../hooks/useEventListener';
 import useStore from '../../store/Store';
+import { MeetingType, MeetingUserType } from '../../types/network/models/meetingBeTypes';
 import { GetMeetingResponse } from '../../types/network/responses/meetingsResponses';
 import { GetRoomResponse } from '../../types/network/responses/roomsResponses';
 import { WsEvent, WsEventType } from '../../types/network/websocket/wsEvents';
 import { RoomType } from '../../types/store/RoomTypes';
 import { wsDebug } from '../../utils/debug';
-import { RoomsApi, MeetingsApi } from '../index';
+import { MeetingsApi, RoomsApi } from '../index';
 
 export function wsEventsHandler(event: WsEvent): void {
 	const state = useStore.getState();
@@ -120,14 +121,6 @@ export function wsEventsHandler(event: WsEvent): void {
 			}
 			break;
 		}
-		case WsEventType.ATTACHMENT_ADDED: {
-			// TODO handle
-			break;
-		}
-		case WsEventType.ATTACHMENT_REMOVED: {
-			// TODO handle
-			break;
-		}
 		case WsEventType.USER_PICTURE_CHANGED: {
 			if (eventArrivesFromAnotherSession) {
 				state.setUserPictureUpdated(event.userId, event.sentDate);
@@ -141,32 +134,40 @@ export function wsEventsHandler(event: WsEvent): void {
 			break;
 		}
 		case WsEventType.MEETING_CREATED: {
-			if (eventArrivesFromAnotherSession) {
-				state.addMeeting({
-					id: event.meetingId,
-					roomId: event.roomId,
-					participants: [],
-					createdAt: event.sentDate
-				});
+			// TODO: wait for meeting events changes
+			// For now, this event doesn't arrive
 
-				// Send custom event to open an incoming meeting notification
-				const room = state.rooms[event.roomId];
-				const isMeetingStartedByMe = event.from === state.session.id;
-				if (room?.type === RoomType.ONE_TO_ONE && !isMeetingStartedByMe) {
-					sendCustomEvent({ name: EventName.INCOMING_MEETING, data: event });
-				}
+			state.addMeeting({
+				id: event.meetingId,
+				name: '', // TODO placeholder
+				roomId: event.roomId,
+				active: false,
+				participants: [],
+				createdAt: event.sentDate,
+				meetingType: MeetingType.PERMANENT // TODO placeholder
+			});
+
+			// Send custom event to open an incoming meeting notification
+			const room = state.rooms[event.roomId];
+			const isMeetingStartedByMe = event.from === state.session.id;
+			if (room?.type === RoomType.ONE_TO_ONE && !isMeetingStartedByMe) {
+				sendCustomEvent({ name: EventName.INCOMING_MEETING, data: event });
 			}
 			break;
 		}
+		case WsEventType.MEETING_STARTED: {
+			// TODO: wait for meeting events changes
+			state.startMeeting(event.meetingId);
+			break;
+		}
 		case WsEventType.MEETING_JOINED: {
-			if (eventArrivesFromAnotherSession) {
-				state.addParticipant(event.meetingId, {
-					sessionId: event.sessionId,
-					userId: event.from,
-					audioStreamOn: false,
-					videoStreamOn: false
-				});
-			}
+			// TODO: wait for event changes
+			state.addParticipant(event.meetingId, {
+				userId: event.from,
+				userType: MeetingUserType.REGISTERED, // TODO placeholder
+				audioStreamOn: false,
+				videoStreamOn: false
+			});
 
 			// Send custom event to delete an incoming meeting notification
 			// if I joined the meeting from another session
@@ -181,6 +182,7 @@ export function wsEventsHandler(event: WsEvent): void {
 			break;
 		}
 		case WsEventType.MEETING_LEFT: {
+			// TODO: wait for event changes
 			if (eventArrivesFromAnotherSession) {
 				if (event.from === state.session.id) {
 					state.deleteMeeting(event.meetingId);
@@ -192,41 +194,53 @@ export function wsEventsHandler(event: WsEvent): void {
 			}
 			break;
 		}
+		case WsEventType.MEETING_STOPPED: {
+			// TODO: wait for meeting events changes
+			state.stopMeeting(event.meetingId);
+			break;
+		}
 		case WsEventType.MEETING_DELETED: {
+			// TODO: wait for meeting events changes
 			state.deleteMeeting(event.meetingId);
 			break;
 		}
 		case WsEventType.MEETING_VIDEO_STREAM_OPENED: {
+			// TODO: wait for meeting events changes
 			if (eventArrivesFromAnotherSession) {
 				state.changeStreamStatus(event.meetingId, event.sessionId, 'video', true);
 			}
 			break;
 		}
 		case WsEventType.MEETING_VIDEO_STREAM_CLOSED: {
+			// TODO: wait for meeting events changes
 			if (eventArrivesFromAnotherSession) {
 				state.changeStreamStatus(event.meetingId, event.sessionId, 'video', false);
 			}
 			break;
 		}
 		case WsEventType.MEETING_AUDIO_STREAM_OPENED: {
+			// TODO: wait for meeting events changes
 			if (eventArrivesFromAnotherSession) {
 				state.changeStreamStatus(event.meetingId, event.sessionId, 'audio', true);
 			}
 			break;
 		}
 		case WsEventType.MEETING_AUDIO_STREAM_CLOSED: {
+			// TODO: wait for meeting events changes
 			if (eventArrivesFromAnotherSession) {
 				state.changeStreamStatus(event.meetingId, event.sessionId, 'audio', false);
 			}
 			break;
 		}
 		case WsEventType.MEETING_SCREEN_STREAM_OPENED: {
+			// TODO: wait for meeting events changes
 			if (eventArrivesFromAnotherSession) {
 				state.changeStreamStatus(event.meetingId, event.sessionId, 'screen', true);
 			}
 			break;
 		}
 		case WsEventType.MEETING_SCREEN_STREAM_CLOSED: {
+			// TODO: wait for meeting events changes
 			if (eventArrivesFromAnotherSession) {
 				state.changeStreamStatus(event.meetingId, event.sessionId, 'screen', false);
 			}
